Bug 1223366 - Update event.buttons on GDK_BUTTON_RELEASE [r=karlt]